@@ -87,6 +87,7 @@ Changes in Bitbake 1.9.x:
 	- Improve circular dependency chain debugging code and user feedback
 	- Don't give a stacktrace for invalid tasks, have a user friendly message (#3431)
 	- Add support for "-e target" (#3432)
+	- Fix shell showdata command (#3259)
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
